# exam_project_mlops

./: README.md  pyproject.toml  requirements.txt  tasks.py
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
models/: sector_classification_model.pth
src/exam_project/: api.py  data.py  evaluate.py  main.py  model.py  train.py
tests/: code_tester.ipynb  sector_classification_model.pth
