[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "exam_project"
version = "0.0.1"
description = "This is the exam project for our group in course 02476 Machine Learning Operations. The project applies Deep Learning methods on a relevant topic, but focuses mainly on the structure of the code, repository, version control, and much more regarding how to collaborate on large projects as a team and making reproducible research."
authors = [
  { name = "Christian", email = "your@email.com" },
]

readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
